Fix wrapping for the checkboxes' text
The text wrapping on these texts was an unintended side effect of
setting a static width on the form cell divs. The cell class was removed
from these texts entirely since they don't contribute anything.

--- a/style.css
+++ b/style.css
@@ -128,13 +128,13 @@ textarea {
     width: 260px;
 }
 
-.form-cell > ul {
+.form-row > ul {
     list-style-type: none;
     margin: 0;
     padding-left: 0;
 }
 
-.form-cell li + li {
+.form-row li + li {
     margin-top: 10px; /* Add additional space between list items */
 }
 
